--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://AndrewSydorenko.github.io/goit-js-hw-08/",
+  "homepage": "https://AndrewSydorenko.github.io/LightBox-test/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
+    "build": "parcel build src/*.html --public-url /LightBox-test/"
   },
   "repository": {
     "type": "git",
